Testing hiding the scrollbar

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
     <head>
         <title>Dirk Schut - Badges</title>
+        <style>
+            .badge{
+                width: 330px;
+                height: 186px;
+                border: 0px;
+                overflow: hidden;
+            }
+        </style>
     </head>
     <h1>Badges Earned by Dirk Schut</h1>
     <div id="badges">
-        <iframe src="https://api.badgr.io/public/assertions/nhztqxJeT1OaiM8-KhAkLA?embedVersion=1&amp;embedWidth=330&amp;embedHeight=186&amp;identity__email=dschut%40outlook.com" title="Badge: Badgr Web Explorer" style="width: 330px; height: 186px; border: 0px;"></iframe>
+        <iframe class="badge" src="https://api.badgr.io/public/assertions/nhztqxJeT1OaiM8-KhAkLA?embedVersion=1&amp;embedWidth=330&amp;embedHeight=186&amp;identity__email=dschut%40outlook.com" title="Badge: Badgr Web Explorer"></iframe>
     </div>
 </html>
