--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <style>
-            .myBadge{
-                width: 400px;
-                height: 200px;
-                border: 0px;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
 
         <title>Dirk Schut - Badges</title>
 
