--- a/index.html
+++ b/index.html
@@ -28,23 +28,12 @@
         </nav>
 
         <main role="main" class="container">
-            <h1>Badges Earned by Dirk Schut</h1>
-
-            <div class="row">
-                <iframe class="col-md-4 myBadge" src="https://api.badgr.io/public/assertions/nhztqxJeT1OaiM8-KhAkLA?embedVersion=1&amp;embedWidth=330&amp;embedHeight=186&amp;identity__email=dschut%40outlook.com" title="Badge: Badgr Web Explorer"></iframe>
-                <div class="col-md-4 myBadge testBadge"><h3>Test Badge</h3></div>
-                <div class="col-md-4 myBadge testBadge"><h3>Test Badge</h3></div>
-                <div class="col-md-4 myBadge testBadge"><h3>Test Badge</h3></div>
-                <div class="col-md-4 myBadge testBadge"><h3>Test Badge</h3></div>
-                <div class="col-md-4 myBadge testBadge"><h3>Test Badge</h3></div>
-                <div class="col-md-4 myBadge testBadge"><h3>Test Badge</h3></div>
-                <div class="col-md-4 myBadge testBadge"><h3>Test Badge</h3></div>
-                <div class="col-md-4 myBadge testBadge"><h3>Test Badge</h3></div>
-            </div>
         </main>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+        <script src="logic.js"></script>
     </body>
 </html>
