--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
 
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <a href="#" class="navbar-brand">Dirk Schut</a>
+            <a href="#" class="navbar-brand" onclick="loadPage('allBadges')">Dirk Schut</a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle Navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
