--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/mrDLSable/badges">GitHub Source</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="loadPage('about')">About</a>
+                    </li>
                 </ul>
             </div>
         </nav>
