--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <div class="navbar-collapse collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="loadPage('allBadges')">All Badges</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="https://github.com/mrDLSable/badges">GitHub Source</a>
                     </li>
                     <li class="nav-item">
